--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -32,3 +32,13 @@
 }
 
 .canela{ font-family:"Canela Deck", Georgia, ui-serif, "Times New Roman", Times, serif; font-synthesis: none; }
+
+/* Neue Haas Unica (UI sans for non-headlines) */
+@font-face{
+  font-family:"Neue Haas Unica";
+  src:url("/fonts/NeueHaasUnica/NeueHaasUnica-Regular.woff2") format("woff2"),
+      url("/fonts/NeueHaasUnica/NeueHaasUnica-Regular.woff") format("woff");
+  font-weight:400;
+  font-style:normal;
+  font-display:swap;
+}
