--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -42,3 +42,19 @@
   font-style:normal;
   font-display:swap;
 }
+@font-face{
+  font-family:"Neue Haas Unica";
+  src:url("/fonts/NeueHaasUnica/NeueHaasUnica-Medium.woff2") format("woff2"),
+      url("/fonts/NeueHaasUnica/NeueHaasUnica-Medium.woff") format("woff");
+  font-weight:500;
+  font-style:normal;
+  font-display:swap;
+}
+@font-face{
+  font-family:"Neue Haas Unica";
+  src:url("/fonts/NeueHaasUnica/NeueHaasUnica-Bold.woff2") format("woff2"),
+      url("/fonts/NeueHaasUnica/NeueHaasUnica-Bold.woff") format("woff");
+  font-weight:700;
+  font-style:normal;
+  font-display:swap;
+}
