--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -43,6 +43,14 @@
   font-display:swap;
 }
 @font-face{
+  font-family:"NeueHaasUnica"; /* alias without space */
+  src:url("/fonts/NeueHaasUnica/NeueHaasUnica-Regular.woff2") format("woff2"),
+      url("/fonts/NeueHaasUnica/NeueHaasUnica-Regular.woff") format("woff");
+  font-weight:400;
+  font-style:normal;
+  font-display:swap;
+}
+@font-face{
   font-family:"Neue Haas Unica";
   src:url("/fonts/NeueHaasUnica/NeueHaasUnica-Medium.woff2") format("woff2"),
       url("/fonts/NeueHaasUnica/NeueHaasUnica-Medium.woff") format("woff");
@@ -51,9 +59,26 @@
   font-display:swap;
 }
 @font-face{
+  font-family:"NeueHaasUnica";
+  src:url("/fonts/NeueHaasUnica/NeueHaasUnica-Medium.woff2") format("woff2"),
+      url("/fonts/NeueHaasUnica/NeueHaasUnica-Medium.woff") format("woff");
+  font-weight:500;
+  font-style:normal;
+  font-display:swap;
+}
+@font-face{
   font-family:"Neue Haas Unica";
-  src:url("/fonts/NeueHaasUnica/NeueHaasUnica-Bold.woff2") format("woff2"),
-      url("/fonts/NeueHaasUnica/NeueHaasUnica-Bold.woff") format("woff");
+  /* If Bold is unavailable, map 700 to Medium assets */
+  src:url("/fonts/NeueHaasUnica/NeueHaasUnica-Medium.woff2") format("woff2"),
+      url("/fonts/NeueHaasUnica/NeueHaasUnica-Medium.woff") format("woff");
+  font-weight:700;
+  font-style:normal;
+  font-display:swap;
+}
+@font-face{
+  font-family:"NeueHaasUnica";
+  src:url("/fonts/NeueHaasUnica/NeueHaasUnica-Medium.woff2") format("woff2"),
+      url("/fonts/NeueHaasUnica/NeueHaasUnica-Medium.woff") format("woff");
   font-weight:700;
   font-style:normal;
   font-display:swap;
